# 1brc-timeless

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench.yaml
scripts/: create_measurements.py
scripts/create_measurements/: Cargo.toml
scripts/create_measurements/src/: main.rs
src/: benches.rs  io.rs  main.rs  truncate.rs
