[package]
name = "lalalalalala"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.5.3", features = ["rayon", "inline", "serde"] }
memmap2 = "0.9.4"
once_cell = "1.19.0"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
voracious_radix_sort = { version = "1.2.0", features = [
    "voracious_multithread",
] }
