[package]
name = "lalalalalala"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3.0"
dashmap = { version = "6.1.0", features = ["rayon", "inline", "serde"] }
memmap2 = "0.9.5"
once_cell = "1.21.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[workspace]
members = [".", "scripts/create_measurements"]
