[package]
name = "create_measurements"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3.0"
dashmap = { version = "6.0.1", features = ["inline", "rayon"] }
indicatif = { version = "0.17.11", features = ["improved_unicode", "in_memory", "rayon"] }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
